--- a/index.html
+++ b/index.html
@@ -44,11 +44,13 @@
     <div class="row text-center">
         <div class="col-sm-12">
             <p><strong>1. What was the first publicly traded U.S. company to reach a $1 trillion market cap?</strong></p>
-            <form>
-                <input type="radio" name="Q1A" value="Apple"> Apple
-                <input type="radio" name="Q1A" value="Facebook"> Facebook
-                <input type="radio" name="Q1A" value="Twitter"> Twitter
-            </form>
+            <div id="questionAns">
+                <form>
+                    <input type="radio" name="Q1A" value="Apple"> Apple
+                    <input type="radio" name="Q1A" value="Facebook"> Facebook
+                    <input type="radio" name="Q1A" value="Twitter"> Twitter
+                </form>
+            </div>
         </div>
     </div><br>
     <div class="row text-center">
