updates to javascript

--- a/index.html
+++ b/index.html
@@ -44,13 +44,11 @@
     <div class="row text-center">
         <div class="col-sm-12">
             <p><strong>1. What was the first publicly traded U.S. company to reach a $1 trillion market cap?</strong></p>
-            <div id="questionAns">
-                <form>
-                    <input type="radio" name="Q1A" value="Apple"> Apple
-                    <input type="radio" name="Q1A" value="Facebook"> Facebook
-                    <input type="radio" name="Q1A" value="Twitter"> Twitter
+                <form id="questionAns" name="questionAns">
+                    <input type="radio" name="question1" value="Apple"> Apple
+                    <input type="radio" name="question1" value="Facebook"> Facebook
+                    <input type="radio" name="question1" value="Google"> Google
                 </form>
-            </div>
         </div>
     </div><br>
     <div class="row text-center">
@@ -96,11 +94,7 @@
             </form>
         </div>
     </div>
-    <br>
-    <br>
-    <div class="col-sm-12 text-center">
-        <button type="button2" class="btn btn-primary btn-lg">Submit</button>
-    </div>
+    
 
 
 
